--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18.2.0",
     "lucide-react": "^0.263.1",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "openai": "^4.20.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
