--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,9 @@ coverage/
 
 # Temporary files
 tmp/
-temp/ 
+temp/
+
+# Resume files (private)
+Polina Kyrylova–senior pm, applied ai.pdf
+"Polina Kyrylova – AI product builder.pdf"
+Polina Kyrylova_AI product manager.pdf 
